# cdk-project

./: .releaserc  CHANGELOG.md  README.md  app.py
.github/workflows/: ci.yml  deploy.yml  release.yml
app/: dockerfile  main.py  pyproject.toml
app/models/: products.py  users.py
app/routes/: products.py  users.py
app/utils/: database.py  exceptions.py  validate_token.py
application_stack/: application_stack.py
