[tool.poetry]
name = "fastapi-mongodb"
version = "0.1.0"
description = ""
authors = ["siobhanmt3 <martinezsiobhan0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
motor = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
